# chain-middleware

./: LICENSE  README.md
contract/busi-wasm/chainmaker/: Cargo.toml
contract/busi-wasm/chainmaker/assets/: did.jsonld
contract/busi-wasm/chainmaker/examples/: parse_cross_chain_msg.rs  vc_sign.rs
contract/busi-wasm/chainmaker/src/: asset.rs  lib.rs
contract/did-manager-wasm/: Cargo.toml
contract/did-manager-wasm/assets/: crossChainMessage.json  rsa2048-2020-08-25.json  vc-raw.jsonld
contract/did-manager-wasm/chainmaker/: did_manager.wasm
contract/did-manager-wasm/chainmaker/src/: did_manager.rs
contract/did-manager-wasm/changan/assets/: did-example-foo.json
contract/did-manager-wasm/changan/examples/: parse_did.rs
contract/did-manager-wasm/src/: lib.rs
cross-chain-mgr/: .gitignore  build.gradle  settings.gradle
fabric-agent/: .gitignore  NOTICE.md  build.gradle  settings.gradle  start.sh  status.sh  stop.sh
front/: README.md  start.sh  status.sh  stop.sh
lingshu-ethereum-agent/: .classpath  build.gradle
tcip-bcos/: go.mod  go.sum
tcip-chainmaker/: Makefile  build_release.sh  event2.json  event3.json  event_cm2eth.json  go.mod  go.sum  register_biz_chain.json  sdk.log.2025090110
tcip-ethereum/: Makefile  build_release.sh  event.json  event2.json  go.mod  go.sum  register_biz_chain1.json
tcip-fabric/: .gitignore  Makefile  README.md  build_release.sh  chain_config.json  event_fab2bcos.json  go.mod  go.sum  register_biz_chain.json
tcip-lingshu/: Makefile  build_release.sh  event2.json  go.mod
tcip-relayer/: Makefile  README.md  build.yml  (+3 more)
(+721 files in other folders)
