[package]
name = "busi-left"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
chrono = "0.4"
contract_sdk_rust = { git = "https://git.chainmaker.org.cn/ChainMaker/contract-sdk-rust.git", branch = "master" }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
k256 = { version = "0.13.4", features = [
    "ecdsa",
    "std",
], default-features = false }
getrandom = { version = "0.2", features = ["custom"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha3 = "0.10.8"
hex-literal = "1.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
